--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <ul>
                             <li><a class="" href="https://github.com/LukasBaranowski">GitHub</a></li>	
                             <li><a class="" href="https://drive.google.com/file/d/1-B1HBMm9nFY54tD8uH_yoa_s_0g7Am8X/view?usp=sharing">CV & Cover Letter</a></li>
-                            <li><a class="" href="">Contact</a></li>
+                            <li><a class="" href="https://www.facebook.com/lukasz.baranowski.94">Contact</a></li>
                             <li><a class="" href="">Projects</a></li>
                             <li><a class="" href="">About</a></li>
                         </ul>
