--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </div>
     
             <div class="textBox">
-                <h2>Portfolio</h2>
-                <p>Welcome to my space where I would like to present to you all the projects I have done in order to learn programming. Main technologies I use are: <br><br> HTML, CSS and Javascript <br><br> If you are interested in my person I would be happy to receive a message</p>
+                <h2>My<span>Portfolio</span></h2>
+                <p>Hi, my name is Lukas and I would like to welcome you to the space where I present some projects I have made during the process of learning programming. Main technologies I use are: <br><br> HTML, CSS and Javascript <br><br> If you are interested in my person wish to know me better I would be happy to receive a message</p>
             </div>
         </div>
             
