--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
             <div class="textBox">
                 <h2>My<span>Portfolio</span></h2>
-                <p>Hi, my name is Lukas and I would like to welcome you to the space where I present some projects I have made during the process of learning programming. Main technologies I use are: <br><br> HTML, CSS and Javascript <br><br> If you are interested in my person wish to know me better I would be happy to receive a message</p>
+                <p>Hi, my name is Lukas and I would like to welcome you to the space where I present some projects I have made during the process of learning programming. Main technologies I use are: <br><br> HTML, CSS and Javascript <br><br> If you are interested in my person and want to know me better I would be happy to receive a message</p>
             </div>
         </div>
             
