--- a/index_projects.html
+++ b/index_projects.html
@@ -12,9 +12,8 @@
         <h2>My<span>Projects</span></h2>
     </div>
     <div class="box">
-        
-        <span style="--i:1;">
-            <a href="https://lukasbaranowski.github.io/MMT/"><img src="proj1.jpg" alt=""></a>
+        <span style="--i:7;">
+            <a href="https://lukasbaranowski.github.io/Whack-a-mole/"><img src="proj7.jpg" alt=""></a>
         </span>
         <span style="--i:2;">
             <a href="https://lukasbaranowski.github.io/ShoppingList/"><img src="proj2.jpg" alt=""></a>
@@ -31,10 +30,12 @@
         <span style="--i:6;">
             <a href="https://lukasbaranowski.github.io/MMT/list-filter.html"><img src="proj6.jpg" alt=""></a>
         </span>
-        <span style="--i:7;">
-            <a href="https://lukasbaranowski.github.io/Whack-a-mole/"><img src="proj7.jpg" alt=""></a>
+        
+        <span style="--i:8;"><a href="https://lukasbaranowski.github.io/tetris/"><img src="proj8.jpg" alt=""></a>
         </span>
-        <span style="--i:8;"><a href="https://lukasbaranowski.github.io/tetris/"><img src="proj8.jpg" alt=""></a></span>
+        <span style="--i:1;">
+            <a href="https://lukasbaranowski.github.io/MMT/"><img src="proj1.jpg" alt=""></a>
+        </span>
     </div>
 </body>
 </html>
