--- a/index_projects.html
+++ b/index_projects.html
@@ -33,7 +33,7 @@
     
     <div class="box">
         <span style="--i:1;">
-            <a href="https://lukasbaranowski.github.io/Whack-a-mole/"><img src="proj7.jpg" alt=""></a>
+            <a href="https://lukasbaranowski.github.io/WeatherApp/"><img src="proj7.jpg" alt=""></a>
         </span>
         <span style="--i:2;">
             <a href="https://lukasbaranowski.github.io/ShoppingList/"><img src="proj2.jpg" alt=""></a>
