--- a/index_projects.html
+++ b/index_projects.html
@@ -55,6 +55,9 @@
         <span style="--i:8;">
             <a href="https://lukasbaranowski.github.io/MMT/"><img src="proj1.jpg" alt=""></a>
         </span>
+        <span style="--i:9;">
+            <a href="https://lukasbaranowski.github.io/CovidAwarenessApp/"><img src="proj9.jpg" alt=""></a>
+        </span>
     </div>
 </body>
 </html>
