--- a/index_projects.html
+++ b/index_projects.html
@@ -56,7 +56,7 @@
             <a href="https://lukasbaranowski.github.io/MMT/"><img src="proj1.jpg" alt=""></a>
         </span>
         <span style="--i:9;">
-            <a href="https://lukasbaranowski.github.io/CovidAwarenessApp/"><img src="proj9.jpg" alt=""></a>
+            <a href="https://lukasbaranowski.github.io/CovidAwarenessApp/"><img src="proj9.png" alt=""></a>
         </span>
     </div>
 </body>
