--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
 
-        <video src="bg1.mp4" autoplay muted loop type="mp4"></video>
+       <video src="bg1.mp4" autoplay muted loop type="mp4"></video>
         <div class="container">
             <div class="unicorn">
                 <img src="uni.png" alt="Imagine-farting-unicorn">
@@ -36,7 +36,7 @@
             <div class="textBox">
                 <h2>My<span>Portfolio</span></h2>
                 <br><br> 
-                <p>Hi, my name is Lukas and I would like to welcome you to the space where I present some projects I have made during the process of learning programming. Main technologies I use are: <br><br> HTML, CSS and Javascript <br><br> If you are interested in my person and wish to know me better I would be happy to receive a message<br><br>Why Unicorn?<br>It is a symbol of someone from different background traveling through the vast universe of coding, exploring it carefuly and finding a new world to settle in</p>
+                <p>Hi, my name is Lukas and I would like to welcome you to the space where I present some projects I have made during the process of learning programming. Main technologies I use are: <br><br> HTML, CSS and Javascript <br><br> If you are interested in my person wish to know me better I would be happy to receive a message<br><br>Why Unicorn?<br>It is a symbol of myslef - a person from different background traveling through the vast universe of coding, exploting it carefuly and finding a new world to settle in</p>
             </div>
         </div>
             
