--- a/index_projects.html
+++ b/index_projects.html
@@ -33,7 +33,7 @@
     
     <div class="box">
         <span style="--i:1;">
-            <a href="https://lukasbaranowski.github.io/WeatherApp/"><img src="proj7.png" alt=""></a>
+            <a href="https://lukasbaranowski.github.io/WeatherApp/"><img src="proj7.jpg" alt=""></a>
         </span>
         <span style="--i:2;">
             <a href="https://lukasbaranowski.github.io/ShoppingList/"><img src="proj2.jpg" alt=""></a>
@@ -50,7 +50,7 @@
         <span style="--i:6;">
             <a href="https://lukasbaranowski.github.io/MonicasPage/"><img src="proj4.jpg" alt=""></a>
         </span>
-        <span style="--i:7;"><a href="https://lukasbaranowski.github.io/tetris/"><img src="proj8.jpg" alt=""></a>
+        <span style="--i:7;"><a href="https://lukasbaranowski.github.io/tetris/"><img src="proj8.png" alt=""></a>
         </span>
         <span style="--i:8;">
             <a href="https://lukasbaranowski.github.io/MMT/"><img src="proj1.jpg" alt=""></a>
