--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div>
                     <div>
                         <ul>
+                            <li><a class="" href="index.html">Home</a></li>
                             <li><a class="" href="index_projects.html">Projects</a></li>
                             <li><a class="" href="https://github.com/LukasBaranowski">GitHub</a></li>	
                             <li><a class="" href="https://drive.google.com/file/d/1-B1HBMm9nFY54tD8uH_yoa_s_0g7Am8X/view?usp=sharing">CV & Cover Letter</a></li>
