--- a/index_projects.html
+++ b/index_projects.html
@@ -60,5 +60,7 @@
             <a href="https://lukasbaranowski.github.io/CovidAwarenessApp/"><img src="proj9.png" alt=""></a>
         </span>
     </div>
+    <video src="menu_bg.mp4" muted type="mp4" class="menu_video"></video>
+    <script src="app.js"></script>
 </body>
 </html>
