--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
           
     </div>
-
+    <video src="menu_bg.mp4" muted type="mp4" class="menu_video"></video>
     <script src="app.js"></script>
 </body>
 </html>
