--- a/index_projects.html
+++ b/index_projects.html
@@ -61,6 +61,6 @@
         </span>
     </div>
     <video src="menu_bg.mp4" muted type="mp4" class="menu_video"></video>
-    <script src="app.js"></script>
+    <script src="app_portfolio.js"></script>
 </body>
 </html>
